"#42 Fixed container spacing, removed redundant code"

--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -4,9 +4,6 @@
 }
 
 .inner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding-top: var(--mantine-spacing-xl);
   padding-bottom: var(--mantine-spacing-xl);
 
